--- a/build.gradle
+++ b/build.gradle
@@ -47,4 +47,11 @@ dependencies {
     compile "io.ktor:ktor-auth-jwt:$ktor_version"
     compile "io.ktor:ktor-jackson:$ktor_version"
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
+
+
+    compile "com.h2database:h2:1.4.199"
+    compile "org.jetbrains.exposed:exposed:0.14.4"
+    compile 'com.zaxxer:HikariCP:3.3.1'
+
+
 }
